--- a/index.html
+++ b/index.html
@@ -145,14 +145,14 @@
                     <div class="container text-center">
                         <div class="row">
                             <div class="col-lg-8 mx-auto">
-                                <h2 class="text-uppercase text-secondary mb-0">Project Name</h2>
+                                <h2 class="text-uppercase text-secondary mb-0">SHELL SCRIPTING&nbsp;</h2>
                                 <hr class="star-dark mb-5"><img class="img-fluid mb-5" src="assets/img/portfolio/cake.png">
                                 <p class="mb-5">As a Middleware SysAdmin at Banca Transilvania, I earned strong shell scripting skills : worked on mostly Linux servers, created numerous Bash but also Powershell scripts, and two whole Grafana + Prometheus and Opensearch + Filebeat + Logstash linux-based monitoring clusters, and also created Jenkins pipelines for jobs, all which had a great contribution in my development.</p>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="modal-footer pb-5"><a class="btn btn-primary btn-lg mx-auto rounded-pill portfolio-modal-dismiss" role="button" data-bs-dismiss="modal"><i class="fa fa-close"></i>&nbsp;Close Project</a></div>
+                <div class="modal-footer pb-5"><a class="btn btn-primary btn-lg mx-auto rounded-pill portfolio-modal-dismiss" role="button" data-bs-dismiss="modal"><i class="fa fa-close"></i>&nbsp;Close&nbsp;</a></div>
             </div>
         </div>
     </div>
@@ -185,7 +185,7 @@
                             <div class="col-lg-8 mx-auto">
                                 <h2 class="text-uppercase text-secondary mb-0">Java</h2>
                                 <hr class="star-dark mb-5"><img class="img-fluid mb-5" src="assets/img/portfolio/game.png">
-                                <p class="mb-5">Got to work a lot with Java during University, had many school subjects that taught us Java basics, but also gathered Spring Boot knowledge by creating a price-comparison website inspired from the Compari.ro platform that also offers Wishlist and amil alerting features.&nbsp;<br><br></p>
+                                <p class="mb-5">Got to work a lot with Java during University, had many school subjects that taught us Java basics, but also gathered Spring Boot knowledge by creating a price-comparison website inspired from the Compari.ro platform that also offers Wishlist and mail alerting features.&nbsp;<br><br></p>
                             </div>
                         </div>
                     </div>
